# win_python_pjt

./: Dockerfile  README.md  main.py  pyproject.toml
