[tool.poetry]
name = "win_python_pjt"
version = "0.1.0"
description = ""
authors = ["konumaru <konumaru1022@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.12"
numpy = "^1.21.2"
pandas = "^1.3.3"
scikit-learn = "^0.24.2"
xgboost = "^1.4.2"
lightgbm = "^3.2.1"
torch = "^1.9.0"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
flake8 = "^3.9.2"
isort = "^5.9.3"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
